<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_service" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_service"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnSpeak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speak_nepali"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/btnOpenWhatsApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_whatsapp"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnJoke"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_joke"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tvJoke"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text=""
        android:textSize="16sp"/>

</LinearLayout>
